--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/11/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">73.0<br/>
-            <span class="timestamp">03:49:40 PM</span><br/>
-            54.2<br/>
-            <span class="timestamp">07:06:15 AM</span>
+          <td class="data new_row">55.7<br/>
+            <span class="timestamp">12:00:18 AM</span><br/>
+            55.5<br/>
+            <span class="timestamp">12:01:30 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">73.0<br/>
-            <span class="timestamp">03:49:40 PM</span>
+          <td class="data new_row">55.7<br/>
+            <span class="timestamp">12:00:18 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">54.2<br/>
-            <span class="timestamp">07:06:15 AM</span>
+          <td class="data new_row">55.5<br/>
+            <span class="timestamp">12:01:30 AM</span>
           </td>
           <td class="data new_row">54.2<br/>
             <span class="timestamp">07:06:15 AM (Thursday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">52.8<br/>
-            <span class="timestamp">06:03:54 PM</span><br/>
-            45.5<br/>
-            <span class="timestamp">11:53:15 PM</span>
+          <td class="data new_row">47.0<br/>
+            <span class="timestamp">12:03:30 AM</span><br/>
+            45.6<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">58.4<br/>
             <span class="timestamp">11:23:38 AM (Monday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">77<br/>
-            <span class="timestamp">06:07:15 AM</span><br/>
-            45<br/>
-            <span class="timestamp">03:34:26 PM</span>
+          <td class="data new_row">73<br/>
+            <span class="timestamp">12:03:30 AM</span><br/>
+            69<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">85<br/>
             <span class="timestamp">07:23:09 AM (Wednesday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">30.031<br/>
-            <span class="timestamp">11:41:02 AM</span><br/>
-            29.890<br/>
-            <span class="timestamp">12:01:00 AM</span>
+          <td class="data new_row">30.024<br/>
+            <span class="timestamp">12:00:06 AM</span><br/>
+            30.020<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">30.031<br/>
             <span class="timestamp">11:41:02 AM (Thursday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            3<br/>
-            186<br/>
-            <span class="timestamp">01:17:45 AM</span>
+            1<br/>
+            210<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             17<br/>
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">1</td>
+          <td class="data new_row">0</td>
           <td class="data new_row">3</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            334
+               N/A
           </td>
           <td class="data new_row">
             0<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            76.0<br/>
-            <span class="timestamp">12:41:00 AM</span><br/>
-            70.6<br/>
-            <span class="timestamp">06:19:01 AM</span>
+            73.3<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            73.3<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             91.8<br/>
@@ -396,10 +396,10 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            44<br/>
-            <span class="timestamp">06:13:01 AM</span><br/>
-            39<br/>
-            <span class="timestamp">01:01:01 AM</span>
+            43<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            43<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             49<br/>
