--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/11/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">55.7&#176;F</td>
+        <td class="data">55.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">55.7&#176;F</td>
+        <td class="data">55.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">55.7&#176;F</td>
+        <td class="data">55.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.7&#176;F</td>
+        <td class="data">47.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">69%</td>
+        <td class="data">73%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.021 inHg (0.013)</td>
+        <td class="data">30.022 inHg (0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:41:06 AM</td>
+          <td class="data">06:41:51 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:19:01 PM</td>
+          <td class="data">07:17:34 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:49:40 PM">
-            73.0</span><br/>
-          <span title="07:06:15 AM">
-            54.2</span>
+          <span title="12:00:18 AM">
+            55.7</span><br/>
+          <span title="12:01:30 AM">
+            55.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:49:40 PM" class="hival">
-            73.0</span>
+          <span title="12:00:18 AM" class="hival">
+            55.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="07:06:15 AM" class="loval">
-            54.2</span>
+          <span title="12:01:30 AM" class="loval">
+            55.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:06:15 AM (Thursday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="06:03:54 PM">
-            52.8</span><br/>
-          <span title="11:53:15 PM">
-            45.5</span>
+          <span title="12:03:30 AM">
+            47.0</span><br/>
+          <span title="12:00:01 AM">
+            45.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:07:15 AM">
-            77</span><br/>
-          <span title="03:34:26 PM">
-            45</span>
+          <span title="12:03:30 AM">
+            73</span><br/>
+          <span title="12:00:01 AM">
+            69</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:23:09 AM (Wednesday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="11:41:02 AM">
-            30.031</span><br/>
-          <span title="12:01:00 AM">
-            29.890</span>
+          <span title="12:00:06 AM">
+            30.024</span><br/>
+          <span title="12:00:01 AM">
+            30.020</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:41:02 AM (Thursday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="01:17:45 AM">
-            3</span><br/>
-          186
+          <span title="12:00:01 AM">
+            1</span><br/>
+          210
         </td>
         <td class="data new_row hilo_week">
           <span title="03:36:26 PM (Wednesday)">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          1</td>
+          0</td>
         <td class="data new_row hilo_week">
           3</td>
         <td class="data new_row hilo_month">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          334
+             N/A
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:41:00 AM">
-            76.0</span><br/>
-          <span title="06:19:01 AM">
-            70.6</span>
+          <span title="12:00:01 AM">
+            73.3</span><br/>
+          <span title="12:00:01 AM">
+            73.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -505,10 +505,10 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:13:01 AM">
-            44</span><br/>
-          <span title="01:01:01 AM">
-            39</span>
+          <span title="12:00:01 AM">
+            43</span><br/>
+          <span title="12:00:01 AM">
+            43</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:57:01 AM (Wednesday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 9 hours, 12 minutes</td>
+      <td class="data">9 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 9 hours, 12 minutes</td>
+      <td class="data">9 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
