--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 12:04:00 AM</p>
+    <p class="lastupdate">09/11/2020 12:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">55.5&#176;F</td>
+        <td class="data">55.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">55.5&#176;F</td>
+        <td class="data">55.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">55.5&#176;F</td>
+        <td class="data">55.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.0&#176;F</td>
+        <td class="data">45.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">73%</td>
+        <td class="data">70%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.022 inHg (0.013)</td>
+        <td class="data">30.020 inHg (0.008)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:18 AM">
             55.7</span><br/>
-          <span title="12:01:30 AM">
-            55.5</span>
+          <span title="12:09:00 AM">
+            55.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:01:30 AM" class="loval">
-            55.5</span>
+          <span title="12:09:00 AM" class="loval">
+            55.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:06:15 AM (Thursday)" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:03:30 AM">
             47.0</span><br/>
-          <span title="12:00:01 AM">
-            45.6</span>
+          <span title="12:06:48 AM">
+            45.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -375,8 +375,8 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            1</span><br/>
+          <span title="12:04:08 AM">
+            2</span><br/>
           210
         </td>
         <td class="data new_row hilo_week">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          0</td>
+          1</td>
         <td class="data new_row hilo_week">
           3</td>
         <td class="data new_row hilo_month">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-             N/A
+          202
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 9 hours, 17 minutes</td>
+      <td class="data">9 days, 9 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 9 hours, 17 minutes</td>
+      <td class="data">9 days, 9 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
