--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 12:09:00 AM</p>
+    <p class="lastupdate">09/11/2020 12:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">55.3&#176;F</td>
+        <td class="data">54.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">55.3&#176;F</td>
+        <td class="data">54.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">55.3&#176;F</td>
+        <td class="data">54.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.7&#176;F</td>
+        <td class="data">45.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.020 inHg (0.008)</td>
+        <td class="data">30.019 inHg (0.009)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:18 AM">
             55.7</span><br/>
-          <span title="12:09:00 AM">
-            55.2</span>
+          <span title="12:13:58 AM">
+            54.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:09:00 AM" class="loval">
-            55.2</span>
+          <span title="12:13:58 AM" class="loval">
+            54.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:06:15 AM (Thursday)" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:03:30 AM">
             47.0</span><br/>
-          <span title="12:06:48 AM">
-            45.3</span>
+          <span title="12:11:44 AM">
+            45.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:06 AM">
             30.024</span><br/>
-          <span title="12:00:01 AM">
-            30.020</span>
+          <span title="12:14:00 AM">
+            30.018</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:41:02 AM (Thursday)">
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             73.3</span><br/>
-          <span title="12:00:01 AM">
-            73.3</span>
+          <span title="12:12:00 AM">
+            73.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 9 hours, 22 minutes</td>
+      <td class="data">9 days, 9 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 9 hours, 22 minutes</td>
+      <td class="data">9 days, 9 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
