--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 04:59:00 AM</p>
+    <p class="lastupdate">09/11/2020 05:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">49.7&#176;F</td>
+        <td class="data">49.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">49.7&#176;F</td>
+        <td class="data">49.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">49.7&#176;F</td>
+        <td class="data">49.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.7&#176;F</td>
+        <td class="data">45.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">83%</td>
+        <td class="data">84%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.023 inHg (0.003)</td>
+        <td class="data">30.020 inHg (-0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">71.9&#176;F</td>
+        <td class="data">71.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,20 +155,20 @@
         <td class="data new_row hilo_day">
           <span title="12:00:18 AM">
             55.7</span><br/>
-          <span title="04:55:21 AM">
-            49.7</span>
+          <span title="05:00:17 AM">
+            49.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="04:55:21 AM (Friday)">
-            49.7</span>
+          <span title="05:00:17 AM (Friday)">
+            49.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
             117.5</span><br/>
-          <span title="09/11/2020 04:55:21 AM">
-            49.7</span>
+          <span title="09/11/2020 05:00:17 AM">
+            49.6</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,16 +211,16 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="04:55:21 AM" class="loval">
-            49.7</span>
+          <span title="05:00:17 AM" class="loval">
+            49.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:55:21 AM (Friday)" class="loval">
-            49.7</span>
+          <span title="05:00:17 AM (Friday)" class="loval">
+            49.6</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/11/2020 04:55:21 AM" class="loval">
-            49.7</span>
+          <span title="09/11/2020 05:00:17 AM" class="loval">
+            49.6</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/29/2020 04:38:40 AM" class="loval">
@@ -237,7 +237,7 @@
         <td class="data new_row hilo_day">
           <span title="12:48:48 AM">
             47.2</span><br/>
-          <span title="04:57:31 AM">
+          <span title="05:00:17 AM">
             44.7</span>
         </td>
         <td class="data new_row hilo_week">
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             73.3</span><br/>
-          <span title="04:39:01 AM">
-            71.9</span>
+          <span title="05:00:01 AM">
+            71.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 14 hours, 12 minutes</td>
+      <td class="data">9 days, 14 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 14 hours, 12 minutes</td>
+      <td class="data">9 days, 14 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
