--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 05:04:00 AM</p>
+    <p class="lastupdate">09/11/2020 05:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.020 inHg (-0.001)</td>
+        <td class="data">30.021 inHg (0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">71.8&#176;F</td>
+        <td class="data">71.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="04:38:33 AM">
-            84</span><br/>
+          <span title="05:06:45 AM">
+            85</span><br/>
           <span title="12:00:01 AM">
             69</span>
         </td>
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          237
+          236
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             73.3</span><br/>
-          <span title="05:00:01 AM">
-            71.8</span>
+          <span title="05:08:01 AM">
+            71.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 14 hours, 17 minutes</td>
+      <td class="data">9 days, 14 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 14 hours, 17 minutes</td>
+      <td class="data">9 days, 14 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
