--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 05:19:00 AM</p>
+    <p class="lastupdate">09/11/2020 05:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">49.6&#176;F</td>
+        <td class="data">49.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">49.6&#176;F</td>
+        <td class="data">49.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">49.6&#176;F</td>
+        <td class="data">49.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.3&#176;F</td>
+        <td class="data">44.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">85%</td>
+        <td class="data">84%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.022 inHg (0.001)</td>
+        <td class="data">30.023 inHg (0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,20 +155,20 @@
         <td class="data new_row hilo_day">
           <span title="12:00:18 AM">
             55.7</span><br/>
-          <span title="05:17:43 AM">
-            49.5</span>
+          <span title="05:23:51 AM">
+            49.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="05:17:43 AM (Friday)">
-            49.5</span>
+          <span title="05:23:51 AM (Friday)">
+            49.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
             117.5</span><br/>
-          <span title="09/11/2020 05:17:43 AM">
-            49.5</span>
+          <span title="09/11/2020 05:23:51 AM">
+            49.3</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,16 +211,16 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:17:43 AM" class="loval">
-            49.5</span>
+          <span title="05:23:51 AM" class="loval">
+            49.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:17:43 AM (Friday)" class="loval">
-            49.5</span>
+          <span title="05:23:51 AM (Friday)" class="loval">
+            49.3</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/11/2020 05:17:43 AM" class="loval">
-            49.5</span>
+          <span title="09/11/2020 05:23:51 AM" class="loval">
+            49.3</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/29/2020 04:38:40 AM" class="loval">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 14 hours, 32 minutes</td>
+      <td class="data">9 days, 14 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 14 hours, 32 minutes</td>
+      <td class="data">9 days, 14 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
