--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 05:29:00 AM</p>
+    <p class="lastupdate">09/11/2020 05:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">49.1&#176;F</td>
+        <td class="data">48.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">49.1&#176;F</td>
+        <td class="data">48.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">49.1&#176;F</td>
+        <td class="data">48.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.8&#176;F</td>
+        <td class="data">44.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">85%</td>
+        <td class="data">86%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.020 inHg (0.001)</td>
+        <td class="data">30.021 inHg (0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,20 +155,20 @@
         <td class="data new_row hilo_day">
           <span title="12:00:18 AM">
             55.7</span><br/>
-          <span title="05:27:57 AM">
-            49.0</span>
+          <span title="05:31:53 AM">
+            48.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="05:27:57 AM (Friday)">
-            49.0</span>
+          <span title="05:31:53 AM (Friday)">
+            48.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
             117.5</span><br/>
-          <span title="09/11/2020 05:27:57 AM">
-            49.0</span>
+          <span title="09/11/2020 05:31:53 AM">
+            48.9</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,16 +211,16 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:27:57 AM" class="loval">
-            49.0</span>
+          <span title="05:31:53 AM" class="loval">
+            48.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:27:57 AM (Friday)" class="loval">
-            49.0</span>
+          <span title="05:31:53 AM (Friday)" class="loval">
+            48.9</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/11/2020 05:27:57 AM" class="loval">
-            49.0</span>
+          <span title="09/11/2020 05:31:53 AM" class="loval">
+            48.9</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/29/2020 04:38:40 AM" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:06:45 AM">
-            85</span><br/>
+          <span title="05:31:31 AM">
+            86</span><br/>
           <span title="12:00:01 AM">
             69</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:23:09 AM (Wednesday)">
-            85</span><br/>
+          <span title="05:31:31 AM (Friday)">
+            86</span><br/>
           <span title="04:59:20 PM (Sunday)">
             9</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 14 hours, 42 minutes</td>
+      <td class="data">9 days, 14 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 14 hours, 42 minutes</td>
+      <td class="data">9 days, 14 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
