--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 07:14:00 PM</p>
+    <p class="lastupdate">09/11/2020 07:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -153,13 +153,13 @@
           <td class="units">&#176;F</td>
           <td class="data new_row">54.2<br/>
             <span class="timestamp">06:16:50 PM</span><br/>
-            43.9<br/>
-            <span class="timestamp">06:53:23 AM</span>
+            42.0<br/>
+            <span class="timestamp">07:18:12 PM</span>
           </td>
           <td class="data new_row">58.4<br/>
             <span class="timestamp">11:23:38 AM (Monday)</span><br/>
-            43.3<br/>
-            <span class="timestamp">04:59:20 PM (Sunday)</span>
+            42.0<br/>
+            <span class="timestamp">07:18:12 PM (Friday)</span>
           </td>
           <td class="data new_row">59.6<br/>
             <span class="timestamp">09/02/2020 01:24:38 PM</span><br/>
