--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 08:44:00 PM</p>
+    <p class="lastupdate">09/11/2020 08:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.8&#176;F</td>
+        <td class="data">66.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.8&#176;F</td>
+        <td class="data">66.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.8&#176;F</td>
+        <td class="data">66.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.7&#176;F</td>
+        <td class="data">41.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">37%</td>
+        <td class="data">40%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.945 inHg (0.013)</td>
+        <td class="data">29.947 inHg (0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph W (270&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -237,20 +237,20 @@
         <td class="data new_row hilo_day">
           <span title="06:16:50 PM">
             54.2</span><br/>
-          <span title="08:43:46 PM">
-            39.7</span>
+          <span title="08:45:00 PM">
+            39.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
             58.4</span><br/>
-          <span title="08:43:46 PM (Friday)">
-            39.7</span>
+          <span title="08:45:00 PM (Friday)">
+            39.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/11/2020 08:43:46 PM">
-            39.7</span>
+          <span title="09/11/2020 08:45:00 PM">
+            39.6</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          170
+          172
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 5 hours, 57 minutes</td>
+      <td class="data">10 days, 6 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 5 hours, 57 minutes</td>
+      <td class="data">10 days, 6 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
