--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 02:44:00 PM</p>
+    <p class="lastupdate">09/12/2020 02:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">94.3&#176;F</td>
+        <td class="data">94.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">94.3&#176;F</td>
+        <td class="data">94.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">94.3&#176;F</td>
+        <td class="data">94.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">33.9&#176;F</td>
+        <td class="data">31.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">12%</td>
+        <td class="data">11%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.840 inHg (-0.085)</td>
+        <td class="data">29.838 inHg (-0.088)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph S (180&#176;)</td>
+        <td class="data">4 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.8&#176;F</td>
+        <td class="data">73.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:33:14 PM">
-            94.3</span><br/>
+          <span title="02:44:10 PM">
+            94.4</span><br/>
           <span title="07:15:43 AM">
             45.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:33:14 PM" class="hival">
-            94.3</span>
+          <span title="02:44:10 PM" class="hival">
+            94.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:16:01 AM">
             29.972</span><br/>
-          <span title="02:40:02 PM">
-            29.840</span>
+          <span title="02:45:02 PM">
+            29.837</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:56:01 AM (Friday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          171
+          172
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:39:02 PM">
-            73.8</span><br/>
+          <span title="02:45:02 PM">
+            73.9</span><br/>
           <span title="07:26:01 AM">
             69.3</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 23 hours, 57 minutes</td>
+      <td class="data">11 days, 0 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 23 hours, 57 minutes</td>
+      <td class="data">11 days, 0 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
