--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 07:09:00 AM</p>
+    <p class="lastupdate">09/13/2020 07:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.5&#176;F</td>
+        <td class="data">39.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">73%</td>
+        <td class="data">71%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.910 inHg (0.040)</td>
+        <td class="data">29.908 inHg (0.038)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="07:04:01 AM">
-            73</span><br/>
+          <span title="07:09:59 AM">
+            74</span><br/>
           <span title="12:00:20 AM">
             46</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:04:01 AM (Sunday)">
-            73</span><br/>
+          <span title="07:09:59 AM (Sunday)">
+            74</span><br/>
           <span title="12:00:20 AM (Sunday)">
             46</span>
         </td>
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          238
+          235
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          238
+          235
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          298
+          297
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 16 hours, 22 minutes</td>
+      <td class="data">11 days, 16 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 16 hours, 22 minutes</td>
+      <td class="data">11 days, 16 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
