--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 11:44:00 AM</p>
+    <p class="lastupdate">09/13/2020 11:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">73.6&#176;F</td>
+        <td class="data">74.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">73.6&#176;F</td>
+        <td class="data">74.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">73.6&#176;F</td>
+        <td class="data">74.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">43.5&#176;F</td>
+        <td class="data">43.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">33%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.902 inHg (-0.019)</td>
+        <td class="data">29.901 inHg (-0.020)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:43:33 AM">
-            73.6</span><br/>
+          <span title="11:48:51 AM">
+            74.9</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:43:33 AM (Sunday)">
-            73.6</span><br/>
+          <span title="11:48:51 AM (Sunday)">
+            74.9</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:43:33 AM" class="hival">
-            73.6</span>
+          <span title="11:48:51 AM" class="hival">
+            74.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:43:33 AM (Sunday)" class="hival">
-            73.6</span>
+          <span title="11:48:51 AM (Sunday)" class="hival">
+            74.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:43:33 AM">
-            43.5</span><br/>
+          <span title="11:48:19 AM">
+            44.5</span><br/>
           <span title="07:29:11 AM">
             37.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:43:33 AM (Sunday)">
-            43.5</span><br/>
+          <span title="11:48:19 AM (Sunday)">
+            44.5</span><br/>
           <span title="07:29:11 AM (Sunday)">
             37.9</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          195
+          193
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          195
+          193
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 20 hours, 57 minutes</td>
+      <td class="data">11 days, 21 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 20 hours, 57 minutes</td>
+      <td class="data">11 days, 21 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
