--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 09:54:00 PM</p>
+    <p class="lastupdate">09/14/2020 09:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -209,13 +209,13 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.985<br/>
-            <span class="timestamp">10:09:01 AM</span><br/>
+          <td class="data new_row">29.989<br/>
+            <span class="timestamp">09:56:02 PM</span><br/>
             29.898<br/>
             <span class="timestamp">03:24:02 PM</span>
           </td>
-          <td class="data new_row">29.985<br/>
-            <span class="timestamp">10:09:01 AM (Monday)</span><br/>
+          <td class="data new_row">29.989<br/>
+            <span class="timestamp">09:56:02 PM (Monday)</span><br/>
             29.833<br/>
             <span class="timestamp">02:56:02 PM (Sunday)</span>
           </td>
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">5</td>
+          <td class="data new_row">4</td>
           <td class="data new_row">4</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
